--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,10 @@ Package: lsoda
 Type: Package
 Title: C++ Header Library for Ordinary Differential Equations
 Version: 1.0
-Author: Mark Clements
-Maintainer: Mark Clements <mark.clements@ki.se>
+Authors@R: person(given = "Mark",
+                  family = "Clements",
+                  role = c("aut", "cre"),
+                  email = "mark.clements@ki.se")
 Description: A C++ header library for using the libsoda-cxx C++ library with R.
 License: MIT + file LICENSE
 Imports: Rcpp (>= 1.0.12)
