--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,7 @@ License: MIT + file LICENSE
 URL: https://github.com/mclements/lsoda
 BugReports: https://github.com/mclements/lsoda/issues
 Imports: Rcpp (>= 1.0.12)
-Suggests: deSolve, RcppArmadillo, microbenchmark
+Suggests: deSolve, RcppArmadillo, RcppEigen, microbenchmark
 LinkingTo: Rcpp
 RoxygenNote: 7.3.2
 Encoding: UTF-8
