--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: lsoda
 Type: Package
-Title: C++ Header Library for Ordinary Differential Equations
+Title: 'C++' Header Library for Ordinary Differential Equations
 Version: 1.0
 Authors@R: c(person("Mark", "Clements",
                   role = c("aut", "cre"),
@@ -12,7 +12,7 @@ Authors@R: c(person("Mark", "Clements",
              person("Alan C.","Hindmarsh", role = "ctb"),
              person("Cleve","Moler", role = "ctb"),
              person("Linda R.","Petzold", role = "ctb"))
-Description: A C++ header library for using the "libsoda-cxx" C++ library with R.
+Description: A 'C++' header library for using the 'libsoda-cxx' library with R. The 'C++' header reimplements the 'lsoda' function from the 'ODEPACK' library for solving initial value problems for first order ordinary differential equations (Hindmarsh, 1982; <https://computing.llnl.gov/sites/default/files/ODEPACK_pub1_u88007.pdf>). The 'C++' header can be used by other R packages by linking against this package. The 'C++' functions can be called inline using 'Rcpp'. Finally, the package provides an 'ode' function to call from R.
 License: MIT + file LICENSE
 URL: https://github.com/mclements/lsoda
 BugReports: https://github.com/mclements/lsoda/issues
